--- a/front/package.json
+++ b/front/package.json
@@ -1,4 +1,22 @@
 {
   "name": "procon2022-homework-front",
-  "private": true
+  "dependencies": {
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4",
+    "@vitejs/plugin-react": "^1.3.2",
+    "typescript": "~4.6.4",
+    "vite": "^2.9.9"
+  },
+  "private": true,
+  "scripts": {
+    "build": "vite build",
+    "check": "tsc",
+    "dev": "vite",
+    "prev": "vite preview"
+  },
+  "type": "module"
 }
