--- a/front/package.json
+++ b/front/package.json
@@ -3,7 +3,8 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
