--- a/front/package.json
+++ b/front/package.json
@@ -2,24 +2,28 @@
   "name": "procon2022-homework-front",
   "dependencies": {
     "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "next": "^12.1.6",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-router-dom": "^6.3.0"
+    "react-dom": "^18.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
+    "@babel/core": "7.x",
+    "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
-    "@vitejs/plugin-react": "^1.3.2",
-    "typescript": "~4.6.4",
-    "vite": "^2.9.9"
+    "eslint": "^8.16.0",
+    "eslint-config-next": "^12.1.6",
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "^2.6.2",
+    "typescript": "^4.6.4"
   },
   "private": true,
   "scripts": {
-    "build": "vite build",
-    "check": "tsc",
-    "dev": "vite",
-    "prev": "vite preview"
+    "build": "next build",
+    "dev": "next dev",
+    "lint": "next lint",
+    "start": "next start"
   },
   "type": "module"
 }
