--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "procon2022-homework-front",
+  "name": "storybaton-web",
+  "version": "0.1.0",
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
